Make only relevant field red when SelectLocation has validation error
The component doesn't rely on FormInputError anymore,
  but expects errorMessage to display

Also fix language

Also add event's main_organizer to other_organizers to prevent bug
  Main_organizer didn't get saved to other_organizer and then we
  couldn't fetch her

Fixes #130

--- a/src/components/SelectLocation/SelectLocation.module.scss
+++ b/src/components/SelectLocation/SelectLocation.module.scss
@@ -50,6 +50,13 @@
       width: 100%;
       white-space: nowrap;
 
+      margin-bottom: 0.5rem;
+
+      .selectLocationErrorWrapper {
+        height: 36px;
+        overflow: visible;
+      }
+
       @include media.for-tablet-landscape-up {
         gap: 16px;
         flex-direction: row;
