--- a/src/components/Steps/Steps.module.scss
+++ b/src/components/Steps/Steps.module.scss
@@ -13,6 +13,7 @@ $step-button-height: 1rem;
 $step-button-connect-height: 4px;
 $step-button-horizontal-gap: 1rem;
 $step-button-line-height: 1.5rem;
+$step-button-line-height-phone: 1rem;
 
 .navWrapper {
   display: flex;
@@ -92,14 +93,17 @@ $step-button-line-height: 1.5rem;
         width: 120px;
         transform: translateX(0)
           translateY(
-            calc($step-button-line-height / 2 - $step-button-connect-height / 2)
+            calc(
+              $step-button-line-height-phone / 2 - $step-button-connect-height /
+                2
+            )
           );
       }
     }
 
     @include media.for-phone-only {
       height: 36px;
-      line-height: 1rem;
+      line-height: $step-button-line-height-phone;
       font-size: 1rem;
       color: colors.$bronto;
       padding: $step-button-vertical-padding 0.4rem;
