Change links in footer, refactor (#164)
https://docs.google.com/document/d/1O17qUylQ5EZZJgu3g6t8FePOzK0VAY-a_9TqYGbuhG4/edit

--- a/src/layout/Layout.module.scss
+++ b/src/layout/Layout.module.scss
@@ -12,7 +12,7 @@ body {
   flex-direction: column;
   height: 100%;
   max-width: 2000px;
-  margin: auto;
+  margin: 0 auto;
 
   & > .row {
     // border: 1px dotted grey; // for debugging
