--- a/src/components/FormLayout/FormLayout.module.scss
+++ b/src/components/FormLayout/FormLayout.module.scss
@@ -9,7 +9,7 @@
   counter-reset: section;
   border: 2px solid colors.$gray-200;
   margin: 1rem 0 0;
-  padding: 0 2rem 1rem;
+  padding: 1rem 2rem 1rem;
   @include media.for-big-desktop-up {
     padding: 2rem 2rem 4rem;
     margin: 1rem 0;
@@ -27,13 +27,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 1rem 0 0;
+  margin: 0;
   @include media.for-big-desktop-up {
     margin: 1rem 0;
   }
 
   header {
-    margin-top: 1.5rem;
+    margin-top: 0.5rem;
     margin-bottom: 1rem;
     font-size: 1.2rem;
     font-weight: 600;
