Create the main state for guide

--- a/src/components/Steps/Steps.module.scss
+++ b/src/components/Steps/Steps.module.scss
@@ -133,7 +133,10 @@ $step-button-line-height-phone: 1rem;
 
 .topActions {
   display: none;
-  @include media.for-desktop-up {
+}
+// TODO: fix that
+@include media.for-big-desktop-up {
+  .topActions {
     display: flex;
   }
   .topActionsButton {
