--- a/src/components/Steps/Steps.module.scss
+++ b/src/components/Steps/Steps.module.scss
@@ -133,14 +133,11 @@ $step-button-line-height-phone: 1rem;
 
 .topActions {
   display: none;
-  @include media.for-desktop-up {
+}
+// TODO: fix that
+@include media.for-middle-desktop-up {
+  .topActions {
     display: flex;
-  }
-  .topActionsButton {
-    width: 90px;
-    @include media.for-big-desktop-up {
-      width: unset;
-    }
   }
 }
 
