--- a/src/components/DataView/DataView.module.scss
+++ b/src/components/DataView/DataView.module.scss
@@ -1,5 +1,13 @@
+ul,
+ol {
+  & > li > .container {
+    padding-left: 0;
+  }
+}
+
 .container {
-  padding: 1rem;
+  // padding: 1rem;
+  padding-left: 1.5rem;
 
   .inlineTitle {
     font-weight: 600;
@@ -18,7 +26,7 @@
   }
 
   ul {
-    margin-bottom: 1rem;
+    // margin-bottom: 1rem;
     margin-left: 1.5rem;
     list-style-type: disc;
   }
@@ -26,7 +34,8 @@
   // format h1 - h6
   @for $i from 1 through 6 {
     h#{$i} {
-      font-size: 2rem - $i * 0.2rem;
+      // font-size: 2rem - $i * 0.2rem;
+      font-size: 1rem;
       font-weight: 600;
     }
   }
