--- a/src/components/Table.module.scss
+++ b/src/components/Table.module.scss
@@ -1,4 +1,5 @@
 @use 'styles/colors';
+@use 'styles/media';
 
 .table {
   table-layout: fixed;
@@ -84,5 +85,12 @@
   &:hover {
     background-color: colors.$gray-200;
     border-radius: 50%;
+  }
+}
+
+:global .mobileHiddenCell {
+  display: none;
+  @include media.for-tablet-landscape-up {
+    display: table-cell;
   }
 }
