--- a/src/components/FormLayout/FormLayout.module.scss
+++ b/src/components/FormLayout/FormLayout.module.scss
@@ -137,7 +137,7 @@
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  align-items: start;
+  align-items: flex-start;
   row-gap: 0;
   column-gap: 1.5rem;
 }
