--- a/src/org/pages/CloseEvent/ParticipantsStep.module.scss
+++ b/src/org/pages/CloseEvent/ParticipantsStep.module.scss
@@ -45,7 +45,7 @@
       @include media.for-desktop-up {
         font-size: 1.5rem;
       }
-      @include media.for-middle-desktop-up {
+      @include media.for-medium-desktop-up {
         font-size: 1.5rem;
       }
     }
