--- a/src/components/FormLayout/FormLayout.module.scss
+++ b/src/components/FormLayout/FormLayout.module.scss
@@ -82,7 +82,7 @@
 .infoBox {
   background-color: colors.$gray-blue;
   padding: 0.5rem 1rem;
-
+  width: 100%;
   p {
     margin: 1rem 0;
     &:first-child {
