--- a/src/org/components/EventForm/steps/ParticipantsStep.module.scss
+++ b/src/org/components/EventForm/steps/ParticipantsStep.module.scss
@@ -18,16 +18,29 @@ h2 {
     th {
       border-bottom: 1px solid #737373;
       text-align: left;
+      svg {
+        display: inline-block;
+      }
+
+      &:nth-last-child(1),
+      &:nth-last-child(2) {
+        text-align: center;
+      }
+
+      &::first-letter {
+        text-transform: uppercase;
+      }
     }
   }
 
   tbody {
     .highlightedRow {
-      background-color: colors.$gray-200;
+      background-color: colors.$gray-100;
     }
     td {
       cursor: pointer;
       text-align: center;
+      justify-content: center;
       &:nth-child(1),
       &:nth-child(2),
       &:nth-child(3) {
@@ -41,10 +54,11 @@ h2 {
       }
       &:last-child {
         width: 50px;
-        border-right: 0px solid #d9d9d9;
+        border-right: 0px;
+        border-left: 1px solid #d9d9d9;
       }
-      &:hover {
-        background-color: colors.$gray-200;
+      svg {
+        display: inline-block;
       }
     }
   }
@@ -90,7 +104,6 @@ h2 {
 }
 
 .applicationWithParticipant {
-  font-weight: 600;
   color: colors.$gray-300;
 }
 
@@ -116,13 +129,7 @@ h2 {
       justify-content: space-between;
       margin-top: 16px;
       button {
-        border: 1px solid black;
-        border-radius: 4px;
-        margin-right: 8px;
-      }
-
-      button:hover {
-        background-color: rgba(211, 216, 221, 0.7);
+        padding: 0.2rem 0.5rem;
       }
     }
 
@@ -202,7 +209,29 @@ h2 {
   }
 }
 
-.rejectedRow {
-  color: colors.$gray-300;
+.disabledCell {
   pointer-events: none;
+  cursor: not-allowed !important;
+  color: colors.$gray-200;
+  svg {
+    path {
+      fill: colors.$gray-200;
+    }
+  }
+}
+
+.oneCellRow {
+  border-left: 0px !important;
+  border-right: 0px;
+  text-align: center !important;
+
+  td {
+    text-align: center !important;
+  }
+}
+
+.iconHead {
+  path {
+    fill: black;
+  }
 }
