Add TableCellIconButton, improve PO AKCI styles

--- a/src/styles/colors.module.scss
+++ b/src/styles/colors.module.scss
@@ -22,4 +22,7 @@
   gray300: colors.$gray-300;
   gray400: colors.$gray-400;
   gray500: colors.$gray-500;
+
+  yellow: colors.$yellow;
+  yellow300: colors.$yellow-300;
 }
