Improve PO AKCI UX:
- fix tableicons over modal
- center Applications in prihlasky step
- add better variable names in ParticipantsStep
- handle situation when user is added to participants
-

--- a/src/org/components/EventForm/steps/ParticipantsStep.module.scss
+++ b/src/org/components/EventForm/steps/ParticipantsStep.module.scss
@@ -193,3 +193,12 @@ h2 {
     fill: black;
   }
 }
+
+.centeredTableBlock {
+  margin: 2rem auto;
+  color: black;
+}
+
+.addParticipantModal {
+  z-index: 10;
+}
