--- a/src/org/components/EventForm/steps/ParticipantsStep.module.scss
+++ b/src/org/components/EventForm/steps/ParticipantsStep.module.scss
@@ -96,62 +96,12 @@ h2 {
       flex-direction: row;
       justify-content: space-between;
       margin-top: 16px;
-      button {
-        padding: 0.2rem 0.5rem;
-      }
     }
 
-    .searchContainer {
-      background-color: #f8f8fa;
-      width: 100%;
-      height: 80px;
-      display: flex;
-      align-items: center;
-      margin-top: 12px;
-      .searchBox {
-        margin-left: 12px;
-
-        button {
-          border: 1px solid black;
-          border-radius: 4px;
-          margin-right: 8px;
-          background-color: none;
-          cursor: pointer;
-        }
-
-        button:hover {
-          background-color: rgba(211, 216, 221, 0.7);
-        }
-      }
-    }
-
-    .emptyListBox {
-      width: 100%;
-      height: 300px;
-      border: solid 2px #f8f8fa;
-      color: #737373;
-      img {
-        width: 80px;
-        margin: 80px auto 0;
-      }
-      div {
-        margin: 0px auto 70px;
-        width: 210px;
-      }
-    }
     .lightUp {
       animation: sampleanimation 7s;
       animation-iteration-count: 1;
     }
-  }
-}
-
-.disabledButton {
-  border: 1px solid #f8f8fa !important;
-  cursor: not-allowed !important;
-  color: #737373 !important;
-  &:hover {
-    background-color: white !important;
   }
 }
 
@@ -195,7 +145,7 @@ h2 {
 }
 
 .centeredTableBlock {
-  margin: 2rem auto;
+  margin: 0 auto;
   color: black;
 }
 
