--- a/src/org/components/EventForm/steps/RegistrationStep.module.scss
+++ b/src/org/components/EventForm/steps/RegistrationStep.module.scss
@@ -2,106 +2,179 @@
 @use 'styles/media';
 
 .questionsBox {
-  background-color: colors.$gray-100;
   width: 100%;
-  padding: 1.5rem;
-  @include media.for-phone-only {
-    padding: 0.1rem;
-  }
-  .question {
-    width: 100%;
-    justify-content: space-between;
-    display: flex;
-    align-items: center;
+  max-width: 925px;
 
-    .delete {
-      background-color: transparent !important;
-      color: colors.$error;
-      @include media.for-phone-only {
-        width: 100%;
-      }
-    }
-    .questionRequired {
-      display: flex;
-      column-gap: 0.5rem;
-      @include media.for-phone-only {
-        flex-direction: column;
-        order: -1;
-        font-size: 0.8rem;
-      }
-    }
+  .questionList {
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+    align-items: stretch;
+  }
+
+  .question {
+    padding: 1rem 1.5rem;
+    background-color: colors.$gray-100;
+
     .questionInputGroup {
       display: flex;
       align-items: center;
-      gap: 8px;
-      width: 90%;
       justify-content: space-between;
-    }
-    .questionInput {
-      width: 70%;
-      @include media.for-phone-only {
-        width: 100%;
-      }
-    }
-    input {
-      width: 100%;
-    }
-    @include media.for-phone-only {
-      flex-direction: column;
-      row-gap: 8px;
-      width: 100%;
-      margin-bottom: 0.5rem;
-    }
+      column-gap: 1rem;
 
-    .delete {
       @include media.for-phone-only {
-        width: 40px;
-        padding: 4px;
-        span {
-          display: none;
+        flex-wrap: wrap;
+      }
+
+      .questionInput {
+        flex: auto;
+
+        input {
+          width: 100%;
+        }
+      }
+      .typeInput {
+        width: 130px;
+        position: relative;
+        select {
+          width: 100%;
+        }
+      }
+      .questionRequired {
+        display: inline-flex;
+        width: unset;
+        margin: unset;
+        padding: unset;
+        column-gap: 0.5rem;
+        @include media.for-phone-only {
+          flex-direction: column;
+          // order: -1;
+          font-size: 0.8rem;
+          gap: 0.25rem;
         }
       }
     }
   }
-  .questionsAddNew {
+
+  .addQuestionButton {
     display: flex;
-    gap: 1rem;
     align-items: center;
     justify-content: center;
-    @include media.for-phone-only {
-      margin-top: 0.5rem;
-    }
+    background-color: colors.$gray-100;
+    padding: 1rem;
+    width: 100%;
+    gap: 0.5rem;
   }
 }
 
+.delete {
+  background-color: transparent !important;
+  color: colors.$error;
+  font-size: 1.5rem;
+  @include media.for-phone-only {
+    // width: 100%;
+  }
+}
+
+// .questionsBox {
+//   width: 100%;
+//   padding: 1.5rem;
+//   @include media.for-phone-only {
+//     padding: 0.1rem;
+//   }
+//   .question {
+//     background-color: colors.$gray-100;
+//     width: 100%;
+//     justify-content: space-between;
+//     display: flex;
+//     align-items: center;
+
+//     .questionInputGroup {
+//       display: flex;
+//       align-items: center;
+//       gap: 8px;
+//       width: 90%;
+//       justify-content: space-between;
+//     }
+//     .questionInput {
+//       width: 70%;
+//       @include media.for-phone-only {
+//         width: 100%;
+//       }
+//     }
+//     input {
+//       width: 100%;
+//     }
+//     @include media.for-phone-only {
+//       flex-direction: column;
+//       row-gap: 8px;
+//       width: 100%;
+//       margin-bottom: 0.5rem;
+//     }
+
+//     .delete {
+//       @include media.for-phone-only {
+//         width: 40px;
+//         padding: 4px;
+//         span {
+//           display: none;
+//         }
+//       }
+//     }
+//   }
+//   .questionsAddNew {
+//     display: flex;
+//     gap: 1rem;
+//     align-items: center;
+//     justify-content: center;
+//     @include media.for-phone-only {
+//       margin-top: 0.5rem;
+//     }
+//   }
+// }
+
 .options {
-  margin-left: 2rem;
+  li {
+    display: flex;
+    align-items: center;
+  }
+
+  li::before {
+    content: '';
+    display: inline-block;
+    width: 1.5rem;
+    height: 1.5rem;
+    flex-basis: 1.5rem;
+    flex-grow: 0;
+    flex-shrink: 0;
+    background-color: #f8f8f8;
+    border: 1px solid lightgray;
+    margin-right: 0.5rem;
+  }
+
+  &.radio {
+    li::before {
+      border-radius: 50%;
+    }
+  }
 
   .option {
     width: 100%;
     justify-content: space-between;
     display: flex;
     align-items: center;
-    gap: 0.5rem;
+    gap: 1rem;
 
     & > div {
       flex: 1;
-    }
-
-    input {
-      width: 100%;
-    }
-
-    .delete {
-      background-color: transparent !important;
-      color: colors.$error;
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      gap: 0.5rem;
-      @include media.for-phone-only {
+      input {
         width: 100%;
       }
     }
+  }
+
+  .addOptionButton {
+    background-color: unset;
+    padding: 0;
   }
 }
