Enable editing imported users

--- a/src/org/components/ImportParticipantsList/ImportParticipantsList.module.scss
+++ b/src/org/components/ImportParticipantsList/ImportParticipantsList.module.scss
@@ -1,6 +1,23 @@
+@use 'styles/colors';
+
 .container {
   display: block;
 }
 
 .table {
+  width: 100%;
+  thead {
+    border-bottom: 2px solid black;
+  }
+  tbody {
+    tr.userRow {
+      border-top: 1px solid black;
+      cursor: pointer;
+      &:hover {
+        td {
+          background-color: colors.$gray-200;
+        }
+      }
+    }
+  }
 }
