Highlight invalid rows

--- a/src/org/components/ImportParticipantsList/ImportParticipantsList.module.scss
+++ b/src/org/components/ImportParticipantsList/ImportParticipantsList.module.scss
@@ -18,6 +18,14 @@
           background-color: colors.$gray-200;
         }
       }
+
+      &.invalid {
+        background-color: colors.$error-light;
+      }
+
+      &.validating {
+        background-color: lightyellow;
+      }
     }
   }
 }
