Change green 200 to lighter

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -6,7 +6,7 @@ $bronto: #080;
 $bronto-500: rgb(9, 80, 9);
 $bronto-400: rgb(0, 94, 0);
 $bronto-300: #080;
-$bronto-200: #6dd6a3;
+$bronto-200: #b8f3d7;
 $bronto-100: #dcf5e8;
 $bronto-light: #beecd5;
 $bronto-super-light: #dcf5e8;
