--- a/src/org/components/EventForm/steps/ParticipantsStep.module.scss
+++ b/src/org/components/EventForm/steps/ParticipantsStep.module.scss
@@ -1,4 +1,5 @@
 @use 'styles/colors';
+@use 'styles/media';
 
 h2 {
   font-family: Arial, Helvetica, sans-serif;
@@ -81,11 +82,15 @@ h2 {
 }
 
 .participantsContainer {
-  width: 80%;
+  width: 100%;
   border: 2px solid rgb(240, 238, 238);
   margin: 50px auto 0;
   display: flex;
   flex-direction: row;
+
+  @include media.for-medium-desktop-up {
+    width: 80%;
+  }
 
   .ListContainer {
     width: 50%;
