Style buttons and inputs in participants step

--- a/src/org/components/EventForm/steps/ParticipantsStep.module.scss
+++ b/src/org/components/EventForm/steps/ParticipantsStep.module.scss
@@ -101,6 +101,15 @@ h2 {
       flex-direction: row;
       justify-content: space-between;
       margin-top: 16px;
+
+      .excelButtons {
+        display: flex;
+        gap: 12px;
+      }
+    }
+
+    .existingParticipantContainer {
+      margin-top: 12px;
     }
 
     .lightUp {
