--- a/src/pages/EventRegistration/EventRegistration.module.scss
+++ b/src/pages/EventRegistration/EventRegistration.module.scss
@@ -1,4 +1,5 @@
 @use 'styles/colors';
+@use 'styles/media';
 
 .header {
   text-align: center;
@@ -27,6 +28,19 @@
   color: white;
   font-weight: bold;
   padding: 1rem;
+}
+
+.answerBox {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  textArea {
+    width: 100%;
+    @include media.for-tablet-landscape-up {
+      width: 500px;
+    }
+  }
 }
 
 // when organizers put very long words into questions and options
