--- a/src/styles/colors.module.scss
+++ b/src/styles/colors.module.scss
@@ -8,7 +8,7 @@
   bronto-light: colors.$bronto-light;
   bronto-super-light: colors.$bronto-super-light;
   opportunities: colors.$opportunities;
-  opportunities-light: colors.$opportunities-light;
+  opportunitiesLight: colors.$opportunities-light;
 
   create-event-main: colors.$bronto;
   close-event-main: colors.$close-event-main;
