--- a/src/org/components/EventForm/steps/ParticipantsStep.module.scss
+++ b/src/org/components/EventForm/steps/ParticipantsStep.module.scss
@@ -85,22 +85,20 @@ h2 {
   width: 100%;
   border: 2px solid rgb(240, 238, 238);
   margin: 50px auto 0;
-  display: flex;
-  flex-direction: row;
 
   @include media.for-medium-desktop-up {
     width: 80%;
   }
 
   .ListContainer {
-    width: 50%;
     padding: 40px;
 
     .buttonsContainer {
       display: flex;
       flex-direction: row;
-      justify-content: space-between;
+      justify-content: center;
       margin-top: 16px;
+      gap: 12px;
 
       .excelButtons {
         display: flex;
