--- a/src/org/components/EventForm/steps/ParticipantsStep.module.scss
+++ b/src/org/components/EventForm/steps/ParticipantsStep.module.scss
@@ -40,20 +40,11 @@ h2 {
     }
     td {
       cursor: pointer;
-      text-align: center;
       justify-content: center;
-      &:nth-child(1),
-      &:nth-child(2),
-      &:nth-child(3) {
-        border-right: 1px solid #d9d9d9;
-      }
-      &:nth-child(2) {
-        width: 50px;
-      }
+
+      &:nth-last-child(2),
       &:last-child {
         width: 50px;
-        border-right: 0px;
-        border-left: 1px solid #d9d9d9;
       }
       svg {
         display: inline-block;
